kubernetes/apps/ingress-app.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: deltavids-app-http
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`theapphub.127.0.0.1.nip.io`)
    kind: Rule
    services:
    - name: deltavids-app
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.127.0.0.1.nip.io`)
      kind: Rule
      services:
        - name: monitoring-grafana
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-route
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.127.0.0.1.nip.io`)
      kind: Rule
      services:
        - name: prometheus-operated
          port: 9090
